--- a/project8.html
+++ b/project8.html
@@ -6,33 +6,38 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>my favorite songs</title>
   </head>
-  <head> top 6 
-  <br> 
-  </br>
-  </head>
-<br> 
-</br>
   <body>
    <table border="1">
 <tr>
-<td>song 1</td>
-<td>song 2</td>
-</tr>
+<th colspan="2">Name</th>
+<th>Artist</th>
+<th>Rating</th>
+     </tr>
 <tr>
-<td>song 3</td>
+<td rowspan="10">Genre 1</td>
+<td>song 4</td>
+  <td>song 3</td>
 <td>song 4</td>
 </tr>
 <tr>
-<td>song 5</td>
 <td>song 6</td>
+  <td>song 3</td>
+<td>song 4</td>
 </tr>
 <tr>
-<td>song 7</td>
 <td>song 8</td>
+  <td>song 3</td>
+<td>song 4</td>
 </tr>
      <tr>
-<td>song 9</td>
 <td>song 10</td>
+       <td>song 3</td>
+<td>song 4</td>
+</tr>
+     <tr>
+<td>song 10</td>
+       <td>song 3</td>
+<td>song 4</td>
 </tr>
   
      
@@ -54,3 +59,4 @@
 </tr>
 </table>
   </body>
+</html>
