--- a/project12.html
+++ b/project12.html
@@ -43,7 +43,7 @@
    
     }
    body {
- background-image: url('imagebackground.jpeg');
+ background-image: url('image/imagebackground.jpeg');
  background-color: gray;
 }  
     .floatright {
@@ -61,7 +61,7 @@
 
   <body>
 <div class="header">header</div>
-<div class="nav floatleft">nav menu </div>
+<div class="nav floatleft">nav menu 
 <a href="project1.html">about me</a>
 <a href="project2.html"> comments</a>
 <a href="project3.html"> favorite animal</a>
