--- a/project12.html
+++ b/project12.html
@@ -43,7 +43,7 @@
    
     }
    body {
- background-image: url('image/imagebackground.jpeg');
+ background-image: url('images/imagebackground.jpeg');
  background-color: gray;
 }  
     .floatright {
