--- a/project13.html
+++ b/project13.html
@@ -41,44 +41,44 @@ background-color: teal;
 </tr>
 
 <tr class='even'>
-<td>
+<td>ampersand
 </td>
-<td>
+<td> &amp;
 </td>
 </tr>
 
 <tr class='odd'>
-<td>
+<td> copyright
 </td>
-<td>
+<td>&copy;
 </td>
 </tr>
 
 <tr class='even'>
-<td>
+<td>less than
 </td>
-<td>
+<td>&lt;
 </td>
 </tr>
 
 <tr class='odd'>
-<td>
+<td>greater than
 </td>
-<td>
+<td>&gt;
 </td>
 </tr>
 
 <tr class='even'>
-<td>
+<td>division
 </td>
-<td>
+<td>&division
 </td>
 </tr>
 
 <tr class='odd'>
-<td>
+<td>spade
 </td>
-<td>
+<td>&spades:
 </td>
 </tr>
   </body>
