--- a/project13.html
+++ b/project13.html
@@ -71,14 +71,14 @@ background-color: teal;
 <tr class='even'>
 <td>division
 </td>
-<td> &division
+<td> &division;
 </td>
 </tr>
 
 <tr class='odd'>
 <td>spade
 </td>
-<td> &spades:
+<td> &spades;
 </td>
 </tr>
   </body>
