--- a/project13.html
+++ b/project13.html
@@ -14,7 +14,7 @@
     .header {
 height: 50px;
 background-color: teal;
-    
+      }
     .even  {
     background-color: green;
     }
@@ -26,59 +26,61 @@ background-color: teal;
   </head>
 
   <body>
-<tr class='header'>
+    <table>
+<tr class="header">
 <th> description
 </th>
 <th> result
 </th>
 </tr>
 
-<tr class='odd'>
+<tr class="odd">
 <td> fraction 3/4
 </td>
 <td> &frac34;
 </td>
 </tr>
 
-<tr class='even'>
+<tr class="even">
 <td>ampersand
 </td>
 <td> &amp;
 </td>
 </tr>
 
-<tr class='odd'>
+<tr class="odd">
 <td> copyright
 </td>
 <td>&copy;
 </td>
 </tr>
 
-<tr class='even'>
+<tr class="even">
 <td>less than
 </td>
 <td> &lt;
 </td>
 </tr>
 
-<tr class='odd'>
+<tr class="odd">
 <td>greater than
 </td>
 <td> &gt;
 </td>
 </tr>
 
-<tr class='even'>
+<tr class="even">
 <td>division
 </td>
 <td> &division;
 </td>
 </tr>
 
-<tr class='odd'>
+<tr class="odd">
 <td>spade
 </td>
 <td> &spades;
 </td>
 </tr>
+      </table>
   </body>
