--- a/project15.html
+++ b/project15.html
@@ -9,9 +9,9 @@
     table}
     width: 900px;
     {
-      .td {
-font-family:"trebuchetms";
-}
+      td }
+      font-family:verdana; 
+      {
 
     </style>
   </head>
