--- a/project16.html
+++ b/project16.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
@@ -8,6 +8,7 @@
       h1 {
         color: red;
         text-align: left;
+      }
       ol {
         font-weight: bold;
         font-size: 16px;
@@ -24,22 +25,26 @@
         margin: 25px 0px 0px 35px;
       }
     </style>
-  </head>
   <title>Dates in American History</title>
+  </head>
+
 
   <body>
-    <h1>Some Important Dates in American History</h2>
-    <br>
+    <h1>Some Important Dates in American History</h1>
+    <br/>
     <div class="dates">
       <ol>
         <li>1607 - Jamestown settlement founded</li>
         <li>1773 - Boston Tea Party</li>
-        <li>1776 - Signing of the <a href="http://www.archives.gov/exhibits/charters/declaration_transcript.html">Declaration of Independence</a>
-        <li>1807 - Lewis & Clark explore Missouri Valley</li>
+        <li>1776 - Signing of the </li> 
+<li>
+<a href="http://www.archives.gov/exhibits/charters/declaration_transcript.html">Declaration of Independence</a>
+</li>
+        <li>1807 - Lewis &amp; Clark explore Missouri Valley</li>
       </ol>
     </div>
-    <div class=flag">
-      <img src="usflag.jpg" width="350" height="185">
+    <div class="flag">
+      <img src="usflag.jpg" alt="American flag" width="350" height="185"/>
     </div>
   </body>
 
