--- a/project15.html
+++ b/project15.html
@@ -9,7 +9,8 @@
     table}
     width: 900px;
     {
-
+.arial ."timesnewroman" ."couriernew" .verdana ."trebuchetms"
+      .georgia ."centurygothic" ."lucidasansunicode" ."paltinolinotype" ."comicsansms"
     </style>
   </head>
 
