--- a/project20.html
+++ b/project20.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <style> .feedback { width: 500px; background-color: gray; padding: 10px; border: 10px; </style>
+    <style> .feedback { width: 500px; background-color: gray; padding: 10px; border: 10px; }</style>
     
     <title>web form</title>
   </head>
