--- a/project1.html
+++ b/project1.html
@@ -29,11 +29,11 @@ p {
 
   <body>
    <h1>Horizon Zero Dawn</h1>
-   <hr>
+   <hr/>
    <h3>About</h3>
    <p> This game is called <a href="https://www.playstation.com/en-us/games/horizon-zero-dawn-ps4/"> <i>Horizon Zero Dawn</i> </a> it's an exhilarating game with stunning graphics.
    </p>
-   <img src="HorizonZeroDawn.jpg" alt="Aloy In the wild lands of this game" width="275" height="183">
+   <img src="HorizonZeroDawn.jpg" alt="Aloy In the wild lands of this game" width="275" height="183"/>
 
 
 
