--- a/project1.html
+++ b/project1.html
@@ -33,7 +33,7 @@ p {
    <h3>About</h3>
    <p> This game is called <a href="https://www.playstation.com/en-us/games/horizon-zero-dawn-ps4/"> <i>Horizon Zero Dawn</i> </a> it's an exhilarating game with stunning graphics.
    </p>
-   <img src="HorizonZeroDawn.jpg" alt="Aloy In the wild lands of this game" width="275" height="183"/>
+   <img src="horizonzerodawn.jpg" alt="Aloy In the wild lands of this game" width="275" height="183"/>
 
 
 
