--- a/project1.html
+++ b/project1.html
@@ -6,10 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My Favorite Video Games</title>
  <style>
- img  {
-    float: right;
-    
-}
+
 h1 {
     
     text-align: center;
@@ -33,7 +30,7 @@ p {
    <h3>About</h3>
    <p> This game is called <a href="https://www.playstation.com/en-us/games/horizon-zero-dawn-ps4/"> <i>Horizon Zero Dawn</i> </a> it's an exhilarating game with stunning graphics.
    </p>
-   <img src="horizonzerodawn.jpg" alt="Aloy In the wild lands of this game" width="275" height="183"/>
+   <img src="horizonzerodawn.jpg" alt="Aloy In the wild lands of this game" style= float:right; width="275" height="183"/>
 
 
 
