--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>My Favorite Video Games</title>
  <style>
-
 h1 {
     
     text-align: center;
@@ -27,10 +26,12 @@ p {
   <body>
    <h1>Horizon Zero Dawn</h1>
    <hr/>
-   <h3>About</h3>
+   <h2>About</h2>
    <p> This game is called <a href="https://www.playstation.com/en-us/games/horizon-zero-dawn-ps4/"> <i>Horizon Zero Dawn</i> </a> it's an exhilarating game with stunning graphics.
    </p>
    <img src="horizonzerodawn.jpg" alt="Aloy In the wild lands of this game" style= float:right; width="275" height="183"/>
+   <p> The game has an all out amazing story that blows me away. I love the game and its over all real feeling it gives. A summary of the game with minor spoilers. Aloy is given to Rost ,an outcast, who lives up in the mountains away from the village. He raises aloy to go compete in the trials so she won't be an outcast any more. long story short things go wrong and she is made a seeker to go out and defeat the main villian of the story an ai named Hades. who is trying to destroy the world.
+   </p>
 
 
 
